# MIZN

./: .gitignore  Cargo.toml  Readme.md  run.sh
mizn-common/: Cargo.toml
mizn-common/src/: bpf.rs  ipc.rs  lib.rs
mizn-ebpf/: Cargo.toml
mizn-ebpf/src/: headers.rs  main.rs  maps.rs  metrics.rs
mizn-ebpf/src/parsing/: ipv4.rs  ipv6.rs  mod.rs  transport.rs
mizn-ui/: Cargo.toml
mizn-ui/src/: app.rs  config.rs  main.rs  utils.rs
mizn-ui/src/draw/: graph.rs  header.rs  mod.rs  security.rs  table.rs
miznd/: Cargo.toml
miznd/src/: bpf_loader.rs  core_loop.rs  ipc_server.rs  main.rs  pcap_task.rs  pcap_writer.rs  resolver.rs  state.rs  telemetry.rs  ui.rs
miznd/src/alerting/: dispatch.rs  mod.rs  rules.rs
miznd/src/clickhouse/: mod.rs  row.rs
src/: ingestion.rs  main.rs  resolver.rs  state.rs  ui.rs
xtask/src/: main.rs
