[package]
name = "miznd"
version = "0.1.0"
edition = "2024"

[dependencies]
aya = { version = "*", features = ["async_tokio"] }
tokio = { version = "1.41.0", features = ["full"] }
rkyv = "0.7.42"
maxminddb = { version = "0.24.0", features = ["mmap"] }
memmap2 = "0.9.5"
parking_lot = "0.12.3"
procfs = "0.16.0"
mizn-common = { path = "../mizn-common" }
