[package]
name = "miznd"
version = "0.1.0"
edition = "2024"

[dependencies]
aya = { version = "0.13.1", features = ["async_tokio"] }
aya-log = "0.2.1"
tokio = { version = "1.41.0", features = ["full"] }
rkyv = { version = "0.7.46", features = ["validation", "alloc"] }
maxminddb = { version = "0.24.0", features = ["mmap"] }
memmap2 = "0.9.5"
parking_lot = "0.12.3"
procfs = "0.16.0"
mizn-common = { path = "../mizn-common", features = ["std"] }
bytemuck = { version = "1.13.1", features = ["derive"] }
anyhow = "1.0"

# Task 4: SQLite WAL — persistent telemetry (bundled, no system libsqlite3)
rusqlite = { version = "0.32", features = ["bundled"] }

# Task 2: L7 DPI — nom zero-copy parser for HTTP and DNS dissection
nom = "7"

# Task 6: SMTP alerts via lettre
lettre = { version = "0.11", features = ["smtp-transport", "builder", "tokio1", "tokio1-native-tls"] }

# Task 7: ClickHouse streaming — enterprise-grade long-term analytics
clickhouse = { version = "0.11", features = ["tls"] }

# Task 7: serde support for ClickHouse row serialization
serde = { version = "1", features = ["derive"] }
